--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     </dependency>
     <dependency>
       <groupId>com.miglayout</groupId>
-      <artifactId>miglayout-swing</artifactId>
+      <artifactId>miglayout-javafx</artifactId>
       <version>5.3</version>
     </dependency>
     <dependency>
