--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
       <version>5.3</version>
     </dependency>
     <dependency>
+      <groupId>com.miglayout</groupId>
+      <artifactId>miglayout-swing</artifactId>
+      <version>5.3</version>
+    </dependency>
+    <dependency>
       <groupId>net.coobird</groupId>
       <artifactId>thumbnailator</artifactId>
       <version>0.4.17</version>
